--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -984,22 +984,10 @@
         width: 20%;
         padding-top: 8px;
         padding-right: 30px;
-
-        &.admin__field-label {
-            padding-top: 0;
-            padding-right: 30px;
-            width: 20%;
-            margin-left: 0;
-        }
-    }
-
-    .form-inline .label ~ .control {
-        margin: 0;
-        width: 60%;
     }
 
     .form-inline .no-label .control {
-        margin-left: 20%;
+        margin-left: 26.7%;
         width: 60%;
     }
 
@@ -1313,12 +1301,6 @@
         margin: 0 0 29px 10px;
     }
 
-    .fieldset {
-        .field {
-            margin: 0 0 29px;
-        }
-    }
-
     .with-note .note,
     .field .note,
     .data-table .note {
@@ -1366,7 +1348,6 @@
         font-size: 14px;
         font-weight: 600;
         line-height: 3.2rem;
-        padding: 0 30px 0 30px;
         white-space: nowrap;
         word-wrap: break-word;
 
@@ -2210,7 +2191,7 @@
         }
 
         .field {
-            margin: 0 0 5px;
+            margin: 0 0 5px -30px;
 
             input[type="checkbox"] {
                 &:not(.banner-content-checkbox) {
